force-app/main/default/objects/InventoryLock__c/InventoryLock__c.object-meta.xml
<CustomObject>
    <label>Bloqueo por Cantidad</label>
    <nameField>
        <displayFormat>IL# {YY}{00000000}</displayFormat>
        <label>InventoryLock Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bloqueos por Cantidad</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>