force-app/main/default/objects/InventoryLock__c/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <description>Id de referencia del bloqueo (CRM o sistema externo)</description>
    <label>Identificador externo</label>
    <length>30</length>
    <type>Text</type>
</CustomField>