force-app/main/default/objects/InventoryLock__c/fields/Inventory__c.field-meta.xml
<CustomField>
    <fullName>Inventory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventory</label>
    <referenceTo>Inventory__c</referenceTo>
    <relationshipLabel>Bloqueos por Cantidad</relationshipLabel>
    <relationshipName>InventoryLock</relationshipName>
    <type>Lookup</type>
</CustomField>