force-app/main/default/objects/InventoryLock__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <description>Cantidad de materiales bloqueados bajo este Id</description>
    <label>Cantidad</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>