force-app/main/default/objects/InventoryLock__c/fields/TTL__c.field-meta.xml
<CustomField>
    <fullName>TTL__c</fullName>
    <description>Tiempo máximo (en seg) que puede vivir un bloqueo</description>
    <label>Tiempo de Bloqueo</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>